# CppTemplates

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  package.xml  toolchains.sh
.devcontainer/: Dockerfile  cmake-tools-kits.json  devcontainer.json  toolchains.sh
.github/workflows/: docker.yml
app/: CMakeLists.txt  app_example.cc  app_example.h
app/include/app/: app_example.h
app/src/: app_example.cc
cmake/: FindGlog.cmake  cmake_tools.cmake  global_defination.cmake
cmake_modules/: FindGlog.cmake  global_defination.cmake
common/: CMakeLists.txt  Instrumentor_main.cpp  configs.cpp  configs.hpp  configs_main.cpp  logger.hpp  main.cpp
common/benchmark/: CMakeLists.txt  InstrumentorTimer.h
common/benchmark/example/: instrumentor_example.cpp
common/configs/: CMakeLists.txt  configs.cpp  configs_example.yaml  configs_test.cpp
common/configs/include/common/: configs.hpp
common/configs/src/: configs.cc
common/configs/test/: configs_test.cc
common/datatype/: CMakeLists.txt  datatype_test.cc  gnss.h  imu.h  io.h  keypose.h  pose.h
common/datatype/include/common/datatype/: gnss.h  imu.h  io.h  keypose.h  pose.h
common/datatype/test/: datatype_gnss_test.cc  datatype_imu_test.cc  datatype_keypose_test.cc  datatype_pose_test.cc
common/logger/: CMakeLists.txt  logger.cc  logger_main.cpp
common/logger/example/: logger_example.cpp
common/logger/src/: logger.cc
common/reflect/: CMakeLists.txt  fmt.h  reflect.h  reflect_test.cc  stream.h  yaml.h
common/reflect/include/common/: reflect.h
common/reflect/include/common/reflect/: core.h  fmt.h  stream.h  yaml.h
common/reflect/test/: reflect_test.cc
common/sensordata/: CMakeLists.txt  gnss.h  imu.h  io.h  keypose.h  pose.h
config/: VersionConfig.h  VersionConfig.h.in  config.yaml  global_defination.h.in  ros_configs.yaml  ros_example.yaml
modules/: CMakeLists.txt
modules/example/: CMakeLists.txt  example.h  example_test.cc
modules/example/test/: example_test.cc
modules/io/: basic_io.h  gnss.h  imu.h  loop.h  time.h  trajectory.h  velocity.h
modules/lidar_process/: CMakeLists.txt  lidar_process.cpp  lidar_process.hpp
modules/sensordata/: CMakeLists.txt  cloud_data.h  gnss_data.cc  gnss_data.h  imu.h  imu_data.cc  imu_data.h  key_frame.cc  key_frame.h  loop_pose.cc  loop_pose.h  pose.cc  pose.h  quaternion.cc  quaternion.h  test.cc  vector3.cc  vector3.h  velocity.cc  velocity.h
modules/submodule1/: CMakeLists.txt  submodule1.h  submodule1_test.cc
modules/submodule2/: CMakeLists.txt  submodule2.cc  submodule2.h  submodule2_test.cc
modules/submodule2/data/: info.txt
ros/: CMakeLists.txt  ros_example.bag  ros_example.cc  ros_example_pub.py
ros/cfg/: app_param.cfg
ros/converter/: gnss.h  imu.h  pointcloud.h
ros/msg/: demo.msg
ros/srv/: func.srv
ros/tools/: rosbag.cc  rosbag.h
rosWrapper/: CMakeLists.txt  package.xml
rosWrapper/app/: demo_node.cpp  demo_node.h  lidar_process_node.cpp
rosWrapper/launch/: lidarProcess_kitti.launch  lidarProcess_sjtu.launch  run_demo.launch
rosWrapper/other/: CMakeLists.txt  rosbag.cc  rosbag.h
rosWrapper/rospub/: CMakeLists.txt  cloudinfo.cc  cloudinfo.h  odometry.cc  odometry.h  path.cc  path.h  pointcloud.cc  pointcloud.h  tf.cc  tf.h
rosWrapper/rossub/: CMakeLists.txt  cloudinfo.cc  cloudinfo.h  gnss.cc  gnss.h  imu.cc  imu.h  odometry.cc  odometry.h  path.cc  path.h  pointcloud.cc  pointcloud.h
rosWrapper/rviz/: lidarProcess.rviz
