<?xml version="1.0"?>
<package format="2">
  <name>cpptemplates</name>
  <version>1.0.0</version>
  <description>The Module SLAM package</description>

  <maintainer email="cpptemplates@cyberc3.com">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
